--- a/test/fixtures/churches.yml
+++ b/test/fixtures/churches.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 santo-antonio-de-piracicaba:
-  name: Categral Santo Antônio de Piracicaba
+  name: Catedral Santo Antônio de Piracicaba
   address: Rua Praça da Catedral Dom Ernesto de Paula, s/n - Centro, Piracicaba - SP
   country: Brasil
   state: São Paulo
