--- a/test/fixtures/confession_schedules.yml
+++ b/test/fixtures/confession_schedules.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  church: one
-  day_of_week: 1
-  start_time: 2024-10-29 13:01:18
-  end_time: 2024-10-29 13:01:18
-  active: false
+  church: santo_antonio_de_piracicaba
+  day_of_week: 2
+  start_time: 2024-11-07 06:00:00
+  end_time: 2024-11-07 08:00:00
+  active: true
 
 two:
-  church: two
-  day_of_week: 1
-  start_time: 2024-10-29 13:01:18
-  end_time: 2024-10-29 13:01:18
-  active: false
+  church: santo_antonio_de_piracicaba
+  day_of_week: 3
+  start_time: 2024-11-07 06:00:00
+  end_time: 2024-11-07 08:00:00
+  active: true
