--- a/test/fixtures/mass_schedules.yml
+++ b/test/fixtures/mass_schedules.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  church: one
-  day_of_week: 1
-  start_time: 2024-10-29 13:00:40
-  active: false
+  church: santo_antonio_de_piracicaba
+  day_of_week: 0
+  start_time: 2024-11-07 05:00:00
+  active: true
 
 two:
-  church: two
-  day_of_week: 1
-  start_time: 2024-10-29 13:00:40
-  active: false
+  church: santo_antonio_de_piracicaba
+  day_of_week: 2
+  start_time: 2024-11-07 05:00:00
+  active: true
